Дописал РПЗ до логической модели бд

--- a/doc/RPZ_Dunaitsev.tex
+++ b/doc/RPZ_Dunaitsev.tex
@@ -149,9 +149,9 @@
     \newpage
 
     \section{Разработка UML диаграммы вариантов использования.}
-	\begin{figure}[h]
+	\begin{figure}[ht!]
 		\centering    % Центрируем
-		\includegraphics[width=1\textwidth]{pictures/UML_variants_using.png}
+		\includegraphics[width=0.7\textwidth]{pictures/UML_variants_using.png}
 		\caption{UML диаграмма вариантов использования.} % Подписть к картинке, будет снизу
 		\label{fig:pic1} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
 	\end{figure}
@@ -165,18 +165,18 @@
    
    \subsection{Сценарий работы главного меню.}
    \begin{itemize}
-   	\item Пользователь запускает сценарий
-   	\item Система присылает главное меню
-   	\item Пользователь выбирает один из пунктов (вариантов использования)
+   	\item Пользователь запускает сценарий.
+   	\item Система присылает главное меню.
+   	\item Пользователь выбирает один из пунктов (вариантов использования).
    	\item Система передаёт управление контроллеру соответствующего варианта
-   	использования
+   	использования.
    \end{itemize}
    \newpage
 
    \subsection{BPMN диаграмма контроллера главного меню.}
-   \begin{figure}[h]
+   \begin{figure}[ht!]
    	\centering    % Центрируем
-   	\includegraphics[width=1\textwidth]{pictures/BPMN_main_menu_using.png}
+   	\includegraphics[width=0.8\textwidth]{pictures/BPMN_main_menu_using.png}
    	\label{fig:pic2} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
    	\caption{BPMN диаграмма контроллера главного меню.}
    \end{figure}
@@ -190,38 +190,39 @@
    	\item На контроллер работы с запросами (адрес '/db\_requests')
    	\item На выход из системы (адрес '/exit')
    \end{itemize}
+
 	\newpage
-	
 	\subsection{Программная архитектура реализации главного меню.}
-	 \begin{figure}[h]
+	 \begin{figure}[ht!]
 		\centering    % Центрируем
-		\includegraphics[height=1\textwidth]{pictures/main_menu_arch.png}
+		\includegraphics[height=0.7\textheight]{pictures/main_menu_arch.png}
 		\label{fig:pic3} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
 		\caption{Программная архитектура реализации главного меню.}
 	\end{figure}
 
    \section{Вариант использования «Работа с запросами».}
+   \subsection{Сценарий использования "Работа с запросами".}
    \begin{itemize}
-   	\item Пользователь запускает сценарий
-   	\item Система присылает меню запросов
-   	\item Пользователь выбирает запрос
-   	\item Система присылает форму для ввода параметров
-   	\item Пользователь вводит параметры
+   	\item Пользователь запускает сценарий.
+   	\item Система присылает меню запросов.
+   	\item Пользователь выбирает запрос.
+   	\item Система присылает форму для ввода параметров.
+   	\item Пользователь вводит параметры.
    	\item Система выполняет запрос и присылает пользователю страницу с результатами
-   	запроса и ссылкой для возврата в меню запросов 
+   	запроса и ссылкой для возврата в меню запросов.
    \end{itemize}
    
    \subsection{BPMN диаграмма контроллера меню запросов.}
-   \begin{figure}[h]
+   \begin{figure}[ht!]
    	\centering    % Центрируем
-   	\includegraphics[width=0.9\textwidth]{pictures/Requests_Controller.png}
+   	\includegraphics[width=0.8\textwidth]{pictures/Requests_Controller.png}
    	\label{fig:pic4} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
    	\caption{BPMN диаграмма контроллера меню запросов.}
    \end{figure}
 
-    \begin{figure}[h]
+    \begin{figure}[ht!]
     	\centering    % Центрируем
-    	\includegraphics[width=0.9\textwidth]{pictures/Handler_BPMN.png}
+    	\includegraphics[width=0.8\textwidth]{pictures/Handler_BPMN.png}
     	\label{fig:pic5} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
     	\caption{BPMN диаграмма обработчика конкретного запроса.}
     \end{figure}
@@ -244,28 +245,29 @@
     таблицей должна находиться ссылка (адрес ‘/reqeusts’) для возврата в меню запросов.
     
     \subsection{Программная архитектура реализации работы с запросами.}
-    \begin{figure}[h]
+    \begin{figure}[ht!]
     	\centering    % Центрируем
-    	\includegraphics[height=0.9\textwidth]{pictures/requests_arch.png}
+    	\includegraphics[height=0.6\textheight]{pictures/requests_arch.png}
     	\label{fig:pic6} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
     	\caption{Программная архитектура реализации работы с запросами.}
     \end{figure}
+    \newpage
     
     \section{Вариант использования «Авторизация». }
 	\subsection{Сценарий работы «Авторизация».}
 	\begin{itemize}
-		\item Пользователь запускает сценарий
-		\item Система возвращает форму ввода логина и пароля
-		\item Пользователь вводит данные и нажимает кнопку отправить
+		\item Пользователь запускает сценарий.
+		\item Система возвращает форму ввода логина и пароля.
+		\item Пользователь вводит данные и нажимает кнопку отправить.
 		\item {Система проверяет введённые данные и возвращает сообщение об успешной
 		       авторизации, если такие логин и пароль существуют в БД, и сообщение об ошибке,
-	      	   если пользователя с таким логином и паролем в БД нет}
+	      	   если пользователя с таким логином и паролем в БД нет.}
 	\end{itemize}
 
     \subsection{BPMN диаграмма контроллера авторизации.}
     \begin{figure}[h]
     	\centering    % Центрируем
-    	\includegraphics[width=1\textwidth]{pictures/BPMN_auth.png}
+    	\includegraphics[width=0.8\textwidth]{pictures/BPMN_auth.png}
     	\label{fig:pic7} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
     	\caption{BPMN диаграмма контроллера авторизации.}
     \end{figure}
@@ -285,12 +287,167 @@
     При нажатии кнопки для очистки сессии должна отобразиться страница с сообщением об
     успешной очистке сессии и ссылкой для перехода в главное меню.
     
+    \newpage
     \subsection{Программная архитектура реализации авторизации.}
-    \begin{figure}[h]
+    \begin{figure}[ht!]
     	\centering    % Центрируем
-    	\includegraphics[width=0.7\textwidth]{pictures/auth_arch.png}
+    	\includegraphics[height=0.4\textheight]{pictures/auth_arch.png}
     	\label{fig:pic8} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
     	\caption{BPMN диаграмма контроллера авторизации.}
     \end{figure}
+
+    \section{Вариант использования "Запись пациентов на госпитализацию".}
+    \subsection{Сценарий использования "Запись пациентов на госпитализацию".}
+    
+    \begin{itemize}
+    	\item {Пользователь запускает сценарий.}
+    	\item {Система присылает форму записи пациентов, имеющих направление на госпитализацию.}
+    	\item {Пользователь выбирает пациента и проверяет его паспортные данные.}
+    	\item {Система выдает список врачей и доступных палат, в которых можно разместить пациента.}
+    	\item {Пользователь выбирает для пациента врача и палату из доступных.}
+    	\item {Система выполняет запрос и вносит изменения в базу данных. Создается новая запись о пациенте и его истории болезни в соответствующих таблицах.}
+    \end{itemize}
+
+    В случае, если мест в палатах нет, пациент сможет быть госпитализирован только после того, как места в палатах освободятся.
 	
+	\subsection{BPMN диаграмма контроллера записи пациентов.}
+	\begin{figure}[ht!]
+		\centering    % Центрируем
+		\includegraphics[width=0.8\textwidth]{pictures/referralGospitalize.png}
+		\label{fig:pic9} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
+		\caption{BPMN диаграмма контроллера записи пациентов на госпитализацию.}
+	\end{figure}
+
+   \subsection{Требования к шаблонам.}
+   
+   Страница с сценарием "Запись пациента на госпитализацию" содержит три поля, обязательных для выбора. Первое поле содержит список фамилий и паспортных данных паицентов, имеющих направление на госпитализацю. Второе поле позволяет сделать выбор палаты, в которой есть место, чтобы разместить пациента. Также для каждой палаты отображено, какое количество людей в ней уже есть. Третье поле позволяет выбрать врача для пациента. Также, чтобы передать выбранные параметры в систему, на странице предусмотрена соответствующая кнопка.
+   
+   При отсутствии свободных мест в платах, пользователь не может записать пациента на госпитализацию до тех пор, пока место в одной из палат не освободится.
+   
+   \newpage
+   \subsection{Программная аритектура реализации сценария "Запись пациента на госпитализацю".}
+   \begin{figure}[ht!]
+   	\centering    % Центрируем
+   	\includegraphics[height=0.5\textheight]{pictures/archReferral.png}
+   	\label{fig:pic10} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
+   	\caption{Программная аритектура реализации сценария "Запись пациента на госпитализацю".}
+   \end{figure}
+
+   \section{Вариант использования "Лечение пациента".}
+   \subsection{Сценарий использования "Лечение пациента".}
+   
+   \begin{itemize}
+   	\item {Пользователь запускает сценарий.}
+   	\item {Открывает форму выбора пациента.}
+   	\item {Пользователь выбирает пациента для проведения осмотра.}
+   	\item {Система получает информацию о выбраном пациенте и отображает страницу с историей болезни пациента.}
+   	\item {Пользователь вносит записи в исорию болезни.}
+   	\item {Система отображает внесенные записи в соответствующем поле на странцие истории болезни.}
+   	\item {Пользователь выписывает пациента.}
+   	\item {Система вносит изменения в историю болезни и закрывает ее. Затем система возвращает пользователя к странице выбора пациентов.}
+   \end{itemize}
+
+    \subsection{BPMN диаграмма контроллера "Лечение пациента".}
+    \begin{figure}[h]
+    	\centering    % Центрируем
+    	\includegraphics[width=1\textwidth]{pictures/treatment.png}
+    	\label{fig:pic11} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
+    	\caption{BPMN диаграмма контроллера "Лечение пациента".}
+    \end{figure}
+
+    \subsection{Требования к шаблонам.}
+
+    Данный сценраий реализации подрузамевает использование двух основных динамических таблиц, а именно: страница выбора паицента, страница лечения выбранного пациента.
+    
+    Страница выбора пациента должна содержать информацию о всех пациентах, для которых на данный момент открыта история болезни. Кроме того, данная страница должна предусматоривать разделение пациентов на две группы. Первая группа содержит пациентов, которые относятся к самому пользователю, а вторая, пациентов, относящихся к другим пользователям. Данные о каждом пользователе представлены в виде некоторого визуального объекта, содержащего кнопку "Провести осмотр". Нажав на эту кнопку пользователь передает параметры о выбраном пользователе в систему, которая в свою очередь открывает страницу лечения выбранного пациента.
+    
+    Страница лечения выбранного пациента должна содержать всю информацию о пациенте, его враче и истории болезни. Кроме того, на данной странице должен размещаться список записей в истории болезни.
+    
+    На странице лечения выбранного пациента должно быть две формы. Первая форма позволяет провести осмотр и внести новую запись в историю болезни. Эта форма должна содержать в себе текстовое поле ввода и кнопку для отправки данных в систему. Вторая форма необходима для выписки пациента. Она также содержит текстовое поле для внесения диагноза при выписке, а и кнопку для отправки данных в систему. При использовании первой формы, пользователь должен увидить отображение новой, внесенной им, записи на странице пациента. При использовании второй формы пользователя вернут на страницу выбора пациента. Однако, только что выписанного пациента в списке уже быть не должно, так как его история болезни закрыта.
+
+    \newpage
+    \subsection{Программная аритектура реализации сценария "Лечение пациента".}
+    \begin{figure}[h]
+    	\centering    % Центрируем
+    	\includegraphics[height=0.7\textheight]{pictures/archTreatment.png}
+    	\label{fig:pic12} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
+    	\caption{Программная аритектура реализации сценария "Лечение пациента".}
+    \end{figure}
+
+    \newpage
+    \section{Логическая модель базы данных}
+    \begin{figure}[ht!]
+    	\centering    % Центрируем
+    	\includegraphics[width=1\textwidth]{pictures/logic_model.png}
+    	\label{fig:pic13} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
+    	\caption{Логическая модель базы данных информационной системы "История болезни". Диаграмма.}
+    \end{figure}
+    
+    \begin{table}[hb!]
+    	\caption{Таблица Doctor}
+    	\begin{center}
+        	\begin{tabular}{ | l | l | l | l | l | l | l | l | }
+        		\hline
+        		\textbf{id} & f\_name & s\_name & surname & speciality & empl\_date & dis\_date & account \\ \hline 
+        		pk & & & & & & & fk
+        	\end{tabular}
+        \end{center}
+    \end{table}
+
+    \begin{table}[hb!]
+    	\caption{Таблица Patient}
+    	\begin{center}
+        	\begin{tabular}{ | l | l | l | l | l | l | l | l |l | }
+        		\hline
+        		\textbf{id} & f\_name & s\_name & surname & birthday & address & passport & doctor & room \\ \hline 
+        		pk & & & & & & & fk & fk
+        	\end{tabular}
+        \end{center}
+    \end{table}
+
+    \newpage
+    \begin{table}[ht!]
+    	\caption{Таблица History}
+    	\begin{center}
+    		\begin{tabular}{ | l | l | l | l | l | l | }
+   	 			\hline
+    			\textbf{id} & receipt\_date & receipt\_diagnose & descharge\_date & descharge\_diagnose & patient \\ \hline 
+    			pk & & & & & fk
+    		\end{tabular}
+    	\end{center}
+    \end{table}
+
+    \begin{table}[ht!]
+    	\caption{Таблица Note}
+    	\begin{center}
+        	\begin{tabular}{ | l | l | l | l | l | }
+        		\hline
+        		\textbf{id} & date & note & doctor & history \\ \hline 
+        		pk & & & & fk
+        	\end{tabular}
+       \end{center}
+   \end{table}
+
+    \begin{table}[ht!]
+    	\caption{Таблица Users}
+    	\begin{center}
+    		\begin{tabular}{ | l | l | l | l | }
+    			\hline
+    			\textbf{id} & login & password & group \\ \hline 
+    			pk & & &
+    		\end{tabular}
+    	\end{center}
+    \end{table}
+
+    \begin{table}[ht!]
+    	\caption{Таблица Room}
+    	\begin{center}
+    		\begin{tabular}{ | l | l | l | }
+    			\hline
+    			\textbf{id} & room & patiens\_amount \\ \hline 
+    			pk & &
+    		\end{tabular}
+    	\end{center}
+    \end{table}
+   
 \end{document}
