Внес правки в старые BPMN диаграммы в РПЗ

--- a/doc/RPZ_Dunaitsev.tex
+++ b/doc/RPZ_Dunaitsev.tex
@@ -101,7 +101,7 @@
 		\large
 		Студент	&	$\underset{\text{подпись, дата}}{\underline{\hspace{0.2\textwidth}}}$ & \underline{\Author}  \\ 
 		& & \\
-		Преподаватель	&	$\underset{\text{подпись, дата}}{\underline{\hspace{0.2\textwidth}}}$ & $\underset{\text{Фамилия, И. О.}}{\underline{\hspace{0.2\textwidth}}}$ \\ 
+		Преподаватель	&	$\underset{\text{подпись, дата}}{\underline{\hspace{0.2\textwidth}}}$ & \underline{Увайсова А. С.} \\ 
 	\end{tabular}
 	
 	\vfil
@@ -222,7 +222,7 @@
 
     \begin{figure}[ht!]
     	\centering    % Центрируем
-    	\includegraphics[width=0.8\textwidth]{pictures/Handler_BPMN.png}
+    	\includegraphics[width=0.8\textwidth]{pictures/requestHandlerBPMN.png}
     	\label{fig:pic5} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
     	\caption{BPMN диаграмма обработчика конкретного запроса.}
     \end{figure}
@@ -267,7 +267,7 @@
     \subsection{BPMN диаграмма контроллера авторизации.}
     \begin{figure}[h]
     	\centering    % Центрируем
-    	\includegraphics[width=0.8\textwidth]{pictures/BPMN_auth.png}
+    	\includegraphics[width=0.8\textwidth]{pictures/authBPMN.png}
     	\label{fig:pic7} % Можно указывать ссылку на эту картинку в тексте, как \ref{fig:pic1}
     	\caption{BPMN диаграмма контроллера авторизации.}
     \end{figure}
